# attacking_agents

./: .gitignore  GEMINI.md  PGDAttacks.py  README.md
intermediate_report/: Attacking_Multimodal_OS_Agents_To_Share_Malicious_Posts.tex  references.bib
mip_generator/: .gitignore  README.md  pyproject.toml  run_mip_uv.slurm  run_mip_uv_amit.slurm
mip_generator/outputs/generated_mips/: README.md
mip_generator/scripts/: generate_mip.py  verify_path.py
mip_generator/src/: PGDAttacks.py  agent.py  attack.py  config.py  models.py  utils.py
papers/summary/: attacking_multimodel_os_agents_summary.md
